@@ -2,6 +2,7 @@ Changes
 
 SVN
 ===
+- easy dictionary access for EDICT, CEDICT and others
 - stroke order corrections and new entries
 - character decomposition corrections
 - fix stroke order calculation for scheme ⿷ that affects characters with
